refactoring Abstract and Introduction

--- a/report/sections/00_Abstract/00_Abstract.tex
+++ b/report/sections/00_Abstract/00_Abstract.tex
@@ -8,15 +8,14 @@
 
 \vspace{0.1cm}
 
-This paper provides a general view about steganalysis with hints to
-steganography. 
+The aim of this paper is providing a general view of steganalysis declined in its aspects
+while giving insights on the steganographic tools used. 
 
 Steganography is the art of hide information into a cover type (the mean of
 transmission used to hide the message) \cite{steganography-definition}.
-Steganalysis is the analysis used to find whether in a cover type there is an
-hidden message.
+Steganalysis is the art of analysing the cover type in order to detect the presence and in some cases even extract hidden information.
 
-We will cover the state of art of the most important and used methods of
+We will cover the state of art of the most important and used methods in
 steganalysis for different cover types: images (stego-key search, difference
 image histogram method, closest color pair method, JPEG steganalysis), audio
 (non compressed and compressed methods, phase coding, Mp3 steganalysis), text
@@ -26,8 +25,7 @@ Moreover, we will give describe the general types of analysis that one can
 perform: statical, visual, spread spectrum, signature, transform domain,
 universal.
 
-At the end we will conclude explaining why steganography and steganalysis are
-important, also joining those two subjects with a wider theme like security in
-sending information.
+Finally we will highlight the deep relation between steganography and steganalysis and describe their 
+role of protagonists in the field of information security.
 
 \end{document}
