--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -5,7 +5,7 @@
     \section{Steganalysis}
     Steganalysis is the branch of study dedicated at analysing the methods and
     the vectors used to transmit an hidden message in order to retrieve such
-    message whenever it is present.
+    message whenever it is present. Usually we call steganalysis successfull when it is capable of detecting the presence of a \emph{stego message}
     Unlike cryptanalysis where the message may even be apparent but encrypted,
     in steganalysis the study of the message starts from a suspect.
     \subsection{Methods}
