--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -5,7 +5,7 @@
     \section{Steganalysis}
     Steganalysis is the branch of study dedicated at analysing the methods and
     the vectors used to transmit an hidden message in order to retrieve such
-    message whenever it is present. Usually we call steganalysis successfull when it is capable of detecting the presence of a \emph{stego message}
+    message whenever it is present. Usually we call steganalysis successfull when it is capable of detecting the presence of a \emph{stego message}.
     Unlike cryptanalysis where the message may even be apparent but encrypted,
     in steganalysis the study of the message starts from a suspect.
     \subsection{Methods}
@@ -61,14 +61,11 @@
     nothing to do with the message itself.
 
     \subsection{Cover types}
-    In the following sections, we will treat several \emph{cover} in which
-    steganography can be applied to hide data.
-    In particular we will focus on some of the most common methods and how is
-    possible to do a steganalysis process in order to detect and in some cases
+    In the following sections, we will treat several \emph{cover vectors} to which
+    steganography can be applied in order to hide data.
+    In particular we will focus on some of the most common methods the steganalytic techniques involved to detect and in some cases
     even retrieve the embedded information.
-    Notice that different cover types requires completely different approaches
-    due to intrinsic factors such as size, presence of redudant data,
-    perceptibility of modification by a human or formats in which the bits of
-    the cover are stored.
+    Notice that since different cover types requires different approaches
+    due to their intrinsic characteristics, we have decided to dedicate a chapter to each of them. 
     
 \end{document}
