--- a/report/sections/00_Abstract/00_Abstract.tex
+++ b/report/sections/00_Abstract/00_Abstract.tex
@@ -11,9 +11,9 @@
 The aim of this paper is providing a general view of steganalysis declined in its aspects
 while giving insights on the steganographic tools used. 
 
-Steganography is the art of hide information into a cover type (the mean of
-transmission used to hide the message) \cite{steganography-definition}.
-Steganalysis is the art of analysing the cover type in order to detect the presence and in some cases even extract hidden information.
+Steganography is the art of hiding information into a cover type (the mean of
+transmission used to hide the message) \cite{steganography-definition}, whilst
+steganalysis is the art of analysing the cover type in order to detect the presence and in some cases even extract hidden information.
 
 We will cover the state of art of the most important and used methods in
 steganalysis for different cover types: images (stego-key search, difference
@@ -21,11 +21,11 @@ image histogram method, closest color pair method, JPEG steganalysis), audio
 (non compressed and compressed methods, phase coding, Mp3 steganalysis), text
 and TCP/IP.
 
-Moreover, we will give describe the general types of analysis that one can
+Moreover, we will describe the general types of steganalysis that one can
 perform: statical, visual, spread spectrum, signature, transform domain,
 universal.
 
-Finally we will highlight the deep relation between steganography and steganalysis and describe their 
+Finally, we will highlight the deep relation between steganography and steganalysis and describe their 
 role of protagonists in the field of information security.
 
 \end{document}
