--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -3,8 +3,8 @@
 \begin{document}
     
     \section{Steganalysis}
-    Steganalysis is the branch of study dedicated at analysing the methods and
-    the vectors used to transmit an hidden message in order to retrieve such
+    Steganalysis is the branch of study dedicated to analysing the methods and
+    the vectors used to transmit a hidden message in order to retrieve such
     message whenever it is present. Usually we call steganalysis successfull when it is capable of detecting the presence of a \emph{stego message}.
     Unlike cryptanalysis where the message may even be apparent but encrypted,
     in steganalysis the study of the message starts from a suspect.
@@ -31,9 +31,8 @@
 
     \subsubsection{Visual}
     This is a very rudimental yet effective way of determining if a message was
-    modified or not. This technique relies on the human eye and ita ability to
-    spot anomalies in the format of a message which may pave the way for
-    suspects.
+    modified or not. This technique relies on the human eye and its ability to
+    spot anomalies in the format of a message which may raise suspicions.
     
     \subsubsection{Spread Spectrum}
     This is a technique borrowed by signal analysis which consists in treating
@@ -55,17 +54,17 @@
     into another so that to make it invisible to the end user.
     
     \subsubsection{Universal}
-    This is a type of analysis performed in a sort of bloind mode. In this case
-    we don't care aboutt he medium through which the message was sent but we
-    perform a series of operations(reading LSB for example) which have little to
+    This is a type of analysis performed in a sort of blind mode. In this case
+    we don't care about the medium through which the message was sent but we
+    perform a series of operations(reading LSB for example) which has little to
     nothing to do with the message itself.
 
     \subsection{Cover types}
     In the following sections, we will treat several \emph{cover vectors} to which
     steganography can be applied in order to hide data.
-    In particular we will focus on some of the most common methods the steganalytic techniques involved to detect and in some cases
-    even retrieve the embedded information.
-    Notice that since different cover types requires different approaches
+    In particular we will focus on some of the most common methods the steganalytic techniques involved in detecting and in some cases
+    even in retrieving the embedded information.
+    Notice that since different cover types require different approaches
     due to their intrinsic characteristics, we have decided to dedicate a chapter to each of them. 
     
 \end{document}
