--- a/report/sections/09_Conclusions/09_Conclusions.tex
+++ b/report/sections/09_Conclusions/09_Conclusions.tex
@@ -3,11 +3,11 @@
 \begin{document}
 \section{Conclusions}
 
-Up to now we discussed what are steganography and steganalysis and how the
+Up to now we discussed what steganography and steganalysis are and how the
 latter is performed. The reason why steganalysis is important is that nowadays
 almost everyone uses a computer or a digital device, and the security of
 informations is a primary object of attention. This attention led to a
-developlment of studies on signal processing jointly with information security
+development of studies on signal processing jointly with information security
 services. Steganography is not the only way one can hide informations, there are
 multiple options, each one of them with a specific target:
 
