--- a/report/sections/02_Steganography/02_Steganography.tex
+++ b/report/sections/02_Steganography/02_Steganography.tex
@@ -20,8 +20,8 @@ Generative steganography instead consists in the group of methods aimed at const
 
 The second classification is oriented on the mathematical representation of the cover types(treated as signals). Heere we distinguish between 
 substitutive and constructive steganography.
-Substitutive steganography targets the background noise in the signals. In this case the noise is modified to embedd the message.
-Usually by exploiting the \emph{LSB}\footnote{Least Significant Bit} of each byte,
+Substitutive steganography targets the background noise in the signals. In this case the noise is modified to embed the message.
+This usually can be achieved by exploiting the \emph{LSB}\footnote{Least Significant Bit} of each byte,
 which is most susceptible to error, to hide the message in the signal matrix.
 
 Several drawbacks arise, such as the limited size of the message to be inserted
@@ -31,7 +31,7 @@ transparency of the message.
 We leave for a further discussion the different available tradeoffs, selectively
 mitigating some of the aforementioned drawbacks. 
 
-Similarly, constructive steganography integrates a noise model into0 the message.
+Similarly, constructive steganography integrates a noise model into the message.
 The main drawback is that it is difficult to produce, and by design fragile to
-attacks\footnote{When refering to attacks to steganography we intend the steganalysis techniques implied to detect the message}.
+attacks\footnote{When referring to attacks to steganography we intend the steganalysis techniques involved to detect the message}.
 \end{document}
