--- a/report/sections/05_Audio/05_Audio.tex
+++ b/report/sections/05_Audio/05_Audio.tex
@@ -8,16 +8,16 @@ Steganography in audio is more challenging with respect to images, because
 the \emph{human auditory system} (HAS) operates over a wide dynamic range,
 while maintaining a high sensitivity to perturbations and noises.
 Howerer, there are still some ``holes'' where data can be hidden.
-The HAS has a quite small differential range, so loud sounds mask out quiet
-sounds, moreover it is unable to perceive absolute sound phase, but only
+The HAS has a quite small differential range, where loud sounds mask out quiet
+sounds, and is unable to perceive absolute sound phase, but only
 relative one.
 
-Another important factor to consider when dealing with sound are the
-transmissions enviroments.
+Moreover, another important factor to consider when dealing with sound are the
+transmissions environments.
 Audio signals can be transmitted through a digital channel (eventually being
 resampled), through an analog channel or ``over the air'' played by a
 speaker and received by a microphone.
-Depending on the transmission channel there could be huge modification that
+Depending on the transmission channel there could be huge modifications that
 can make the steganalysis process impossible, but also that can compromise
 irreparably the hidden message, damaging also the steganographer
 \cite{techniques-data-hiding}.
@@ -30,7 +30,7 @@ We can distinguish two different types of audio steganography: steganography
 on \emph{non-compressed} audio files and on \emph{compressed} ones.
 The first ones aims at exploiting the vulnerabilities of the \emph{HAS}
 presented above, whereas the second ones perform minor modifications to
-embedd data based on the way in which the compression is perfomed
+embed data based on the way in which the compression is performed
 \cite{review-audio-steganalysis}.
 
 \subsection{Phase coding}
@@ -55,7 +55,7 @@ modified signals.
 As proposed in \cite{steganalysis-phase-coding}, the signal is divided into segments to which is applied a
 \emph{fast Fourier transform} (FFT) in order to extract the phase difference between adjacent segments.
 Such phase difference is then monitored, calculating statistical features of the sample. Finally a \emph{SVM classifier} (support-vector machines) is used to
- detect if the signal has been modified or not.
+detect if the signal has been modified or not.
 
 A SVM classifier, after a proper training, is able to clearly distinguish
 between elements by mapping them into two different classes by means of
@@ -118,7 +118,7 @@ The Mp3 compression algorithm consist of two nested loops.
 The \emph{inner loop} does the quantization of the data and determines the
 suitable quantizer step in function of the available quantity of bits.
 Whereas the \emph{outer loop} controls the distorsion of the encoding and
-keeps it beyond the percpetion level.
+keeps it beyond the perception level.
 
 The most common steganographic algorithms apply some modifications on the
 encoding algorithm, for instance, modify the termination condition on the
@@ -126,12 +126,12 @@ inner loop and hide the data during the compression process or modify the
 compression coefficients or parameters saved (for instance by replacing the
 LSB).
 
-To perform a steganalystic process on an Mp3 file is necessary to do a
-statistical analysis on the lenght of the quantization steps or on the
+To perform a steganalystic process on an Mp3 file it is necessary to do a
+statistical analysis on the length of the quantization steps or on the
 \emph{MDCT} (modified discrete cosine transform) coefficients, the transform
 used in the compression algorithm.
 The analysis methods are similar to ones presented in the other sections in
 this paper, since they rely on some previous knowledge of what is expected
-and on calculations that will tell if there is or not a message encrypted.
+and on calculations that will tell if there is or not an encrypted message.
 
 \end{document}
